@@ -13,10 +13,11 @@
       w-top-full
       w-w-full
       w-h-[calc(100vh-100%)]
-      sm:w-max-w-[500px]
+      md:w-w-1/3
       w-transform
       w-translate-x-full
-      w-px-6
+      w-px-5
+      xl:w-px-10
       w-py-4
       w-bg-white
       w-box-border
@@ -25,7 +26,12 @@
       w-border-l
       w-border-grey-100
       w-overflow-y-auto
-      w-scrollbar-thin;
+      w-scrollbar-thin
+      md:w-min-w-[22.875rem]
+      sm:w-max-w-[22.5rem]
+      md:w-max-w-[35.937rem]
+      lg:w-max-w-[31.25rem]
+      xl:w-max-w-[46.875rem];
 
   &--open {
     @apply w-translate-x-0;
